--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,7 +1,7 @@
 #logo
 {
-	width: 40px;
-	height: 40px;
+	width: 4rem;
+	height: 4rem;
 	margin-top: 5px;
 }
 
@@ -10,12 +10,29 @@ body
 	font-family: 'Raleway', sans-serif;
 	width: 100%;
 	height: 100%;
+	font-size: 1.3rem;
 }
 
 .right-vertical-line
 {
 	border-right: 1px solid #D4D8D8;
 	padding-right: 1%;
+}
+
+.input-group-addon:hover
+{
+	cursor: pointer;
+}
+
+.form-check-label:hover
+{
+	color: #33cccc;
+}
+
+.delete-button:hover
+{
+	color: #33cccc;
+	cursor: pointer;
 }
 
 .left-vertical-line
@@ -33,6 +50,13 @@ body
 {
 	color: #33cccc;
 }
+
+.nav-link
+{
+	font-size: 1.25rem;
+}
+
+
 
 .center-align
 {
@@ -63,6 +87,7 @@ body
 {
 	color: #828282;
 	margin-top: 3%;
+	font-size: 1.7rem;
 }
 .center-text
 {
@@ -84,6 +109,11 @@ body
 
 }
 
+.hover
+{
+	cursor: pointer;
+}
+
 .left-align
 {
 	margin-left: 5%;
@@ -98,12 +128,20 @@ body
 {
 	margin-top: 2%;
 }
+
 .card
 {
 	width: 30rem;
-	margin-right: 0.5%;
+	margin-bottom: 5%;
 	height: 15rem;
 }
+
+.card:hover
+{
+	border-color: #33cccc;
+	cursor: pointer;
+}
+
 
 .card-block
 {
@@ -117,12 +155,33 @@ body
 	color: white;
 	border-radius: 0;
 	font-family: 'Raleway', sans-serif;
-    box-shadow: 2px 2px 2px #888888;
+   /*box-shadow: 2px 2px 2px #888888;*/
+}
+
+.btn-primary:hover
+{
+	cursor: pointer;
+}
+
+.user-input
+{
+	font-size: 1.3rem;
+}
+
+.user-input-h
+{
+	font-weight: bold;
+	font-size: 1.3rem;
+}
+
+.form-input-group
+{
+	margin-bottom: 2%;
 }
 
 .form-card
 {
-    box-shadow: 1px 1px 1px 1px #888888;
+    box-shadow: 0px 1px 1px 0px #888888;
     padding: 3%;
     width: 95%;
     margin-bottom: 5%;
@@ -154,18 +213,19 @@ body
 #footer
 {
 	border-top: 1px solid #D4D8D8;
-	margin-top: 10%;
-	position: absolute;	
-	bottom: 0;
-	width: 100%;
-	left: 0;
+	margin-top: 3%;
+	height: 5%;
+	bottom: 3px;
 }
 
 #footer-bigger
 {
 	border-top: 1px solid #D4D8D8;
-	margin-top: 6%;
+	margin: 0 auto;
 	height: 5%;
+	bottom: 3%;
+	position: absolute;
+	width: 100%;
 }
 
 
@@ -180,10 +240,56 @@ body
 	margin-right: 5%;
 }
 
+th
+{
+	background-color: #33cccc; 
+	border: 1px solid #dddddd;
+	color: white;
+}
 .form-control
 {
-	background-color: #F2F2F2;
+	background-color: #F7F7F7;
 	border: solid 1px #E0E0E0;
+	font-size: 1.3rem;
+}
+
+.form-checkbox
+{
+	transform: scale(1.3);
+}
+
+.form-check
+{
+	width: 100%;
+}
+
+.form-check-label
+{
+	width: 100%;
+}
+
+input:hover
+{
+	border: 1px solid #33cccc;
+}
+
+textarea:hover
+{
+	border: 1px solid #33cccc;
+}
+
+select:hover
+{
+	border: 1px solid #33cccc;
+}
+input:focus::-webkit-input-placeholder { color:transparent; }
+input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
+input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
+input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
+
+label
+{
+	font-size: 1.3rem;
 }
 
 .text-placeholder
@@ -191,6 +297,7 @@ body
 	background-color: #F2F2F2;
 	border: solid 1px #E0E0E0;
 	padding-left: 1%;
+	padding: 1%;
 }
 
 .btn-post
@@ -202,6 +309,8 @@ body
 {
 	width: 100%;
 }
+
+
 
 .skill-group
 {
@@ -218,7 +327,7 @@ body
 }
 #logo-full
 {
-	width: 10rem;
+	width: 12rem;
 	border-radius: 0;
 }
 
@@ -232,6 +341,13 @@ body
 	color: #33cccc;
 }
 
+.slick-slide
+{
+	width: 20rem;
+	margin-left: 0.15%;
+	margin-bottom: 10px;
+}
+
 .btn-lg
 {
 	padding: .3rem 1.4rem;
@@ -243,7 +359,7 @@ body
 	color: white;
 	border-radius: 0;
 	font-family: 'Raleway', sans-serif;
-    box-shadow: 5px 5px 5px #888888;
+    /*box-shadow: 5px 5px 5px #888888;*/
 }
 
 
