--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -10,7 +10,7 @@
 				<li class="nav-item">
 					<a class="nav-link {{home}}" href="/home">Home </a>
 				</li>
-				{{#unless hide}}
+				{{#unless signin}}
 				<li class="nav-item">
 					<a class="nav-link {{task}}" href="/tasks">Task List</a>
 				</li>
