--- a/views/task-browse.html
+++ b/views/task-browse.html
@@ -50,7 +50,7 @@
 						<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Description 
 						</th>
 				</tr>
-				</thead>
+				</thead
 				<tbody>
 			{{#each cards}}
 				<tr>
