--- a/views/task-create.html
+++ b/views/task-create.html
@@ -1,5 +1,4 @@
 
-<script type="text/javascript" src="../scripts/create.js"></script>
 
 <script type="text/javascript" src="../bower_components/moment/min/moment.min.js"></script>
   	<script type="text/javascript" src="../bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
@@ -10,6 +9,7 @@
 
  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAej_Btkc_ko3TrAgYkLY52elkW6bahpgk&libraries=places&callback=initMap"
     async defer></script>
+<script type="text/javascript" src="../scripts/create.js"></script>
 
 <script id="render-navbar" type="text/x-handlebars-template">
 	{{> navbar create="active"}}
@@ -26,22 +26,16 @@
 		<div class="form-card">
 			<div id="title-container" class="form-group">
 				<label for="title">Title</label>
-				<input required type="text" name="title" {{#if title }} value="{{title}}" {{/if}} class="form-control" id="title" placeholder="Enter title">
+				<input required type="text" name="title" {{#if title}} value="{{title}}" {{/if}} class="form-control" id="title" placeholder="Enter title">
 				<div id="title-req" style="display: none" class="form-control-feedback">This field is required. </div>
 
 			</div>
-			<!--
-			<div class=" form-group">
-					<label for="location">Location</label>
-					<input required="true" type="text" name="location" {{#if location }} value="{{location}}" {{/if}} class="form-control" id="location" placeholder="Either type in location or put pin on map.">
-					 <div class="form-control-feedback">This field is required.</div>
-			</div>
-			-->
 			<div id="loc-container" class="form-group">
 				<label for="location"> Location </label>
 				<input id="location" class="form-control" type="text" placeholder="Search Location">
 				<div id="loc-req" style="display: none" class="form-control-feedback">This field is required. </div>
-			 <div style="height: 300px" class="form-group" id="map">
+			 <div style="background-image: url('../imgs/loading_spinner.gif'); background-repeat: no-repeat; background-position: center;
+ height: 300px" class="form-group" id="map">
 
 			 </div>
 			 </div>
@@ -79,13 +73,13 @@
 
 				<div class="col-md-4">
 					<label for="clock">Time</label>
-					<div class="container">
-						<input type='text'{{#if start_time }} value="{{start_time}}" {{/if}} class="form-control" id='clock' />
+					<div id="clock" class="container input-group">
+						<input type='text'{{#if start_time}} value="{{start_time}}" {{/if}} class="form-control" />
+						<span class="input-group-addon">
+                        	<span class="fa fa-calendar"></span>
+                    	</span>
 					</div>
-				</select>
-
-			</div>
-
+				</div>
 		</div>
 		<div class="form-group">
 			<label for="disclaimer">Disclaimers</label>
@@ -94,7 +88,7 @@
 				<ul class="checkbox-grid">
 					{{#listnowrap disclaimers}}
 					<label class="form-check-label">
-						<input type="checkbox" name="{{name}}" value="{{value}}" />  {{label}}
+						<input class="form-checkbox" type="checkbox" name="{{name}}" value="{{value}}" />  {{label}}
 					</label>
 					{{/listnowrap}}
 				</ul>
@@ -114,11 +108,12 @@
 						{{#each skills}}
 						<div class="form-check">
 							<label class="form-check-label">
-								<input type="checkbox" name="{{name}}" value="{{value}}" /> {{#if label}} {{label}} {{else}} {{value}} {{/if}}
-								{{#if more}}
-								<label for={{moreID}}> : </label><input class="more-info" id="{{moreID}}" type='text' readonly />
+								<input class="form-checkbox" type="checkbox" name="{{name}}" value="{{value}}" /> {{#if label}} {{label}} {{else}} {{value}} {{/if}}
+							{{#if more}}
+									<input style="margin-left: 4%; width: 95%" class="more-info" id="{{moreID}}" type='text' readonly />
 								{{/if}}
 							</label>
+								
 						</div>	
 						{{/each}}
 					</div>
@@ -133,11 +128,16 @@
 							{{#each skills}}
 							<div class="form-check">
 								<label class="form-check-label">
-									<input type="checkbox" name="{{name}}" value="{{value}}" /> {{#if label}} {{label}} {{else}} {{value}} {{/if}}
-									{{#if more}}
-									<label for={{moreID}}> : </label><input class="more-info" id="{{moreID}}" type='text' readonly />
-									{{/if}}
+									<input class="form-checkbox" type="checkbox" name="{{name}}" value="{{value}}" /> {{#if label}} {{label}} {{else}} {{value}} {{/if}}
+									{{#unless value}} 
+										Custom Language
+									{{/unless}}
+								{{#if more}}
+									</br>
+									<input style="margin-left: 4%; width: 95%" class="more-info" id="{{moreID}}" type='text' readonly />
+								{{/if}}
 								</label>
+								
 							</div>	
 							{{/each}}
 						</div>
@@ -150,29 +150,43 @@
 		{{#if volunteers}}
 		<h7 class="section-title"> Volunteers </h7>
 		<div class="form-card">
-				<div class="row">
-					<div class="col-md-6">
+			<form id = "volunteer-form">
+				<div class="row"  style="margin-bottom: 1%">
+					<div id="first-container" class="col-md-6">
 						<label for="first">First Name</label>
-						<input required type="text" name="first" class="form-control" id="first" placeholder="Enter First Name">
+						<input required type="text" name="first" class="form-control" id="first" >
+						<div id="first-req" style="display: none" class="form-control-feedback">This field is required. </div>
+
 					</div>
-					<div class="col-md-6">
+					<div id="last-container" class="col-md-6">
 						<label for="first">Last Name</label>
-						<input required type="text" name="last" class="form-control" id="last" placeholder="Enter Last Name">
+						<input required type="text" name="last" class="form-control" id="last" >
+						<div id="last-req" style="display: none" class="form-control-feedback">This field is required. </div>
+
 					</div>
 				</div>
 				<div>
 					<div class="row">
-						<div class="col-md-6">
+						<div id="phone-container" class="col-md-6">
 							<label for="first">Phone Number</label>
-							<input required type="text" name="phone" class="form-control" id="phone" placeholder="Enter Phone Number">
+							<input required data-format = "(ddd) ddd-dddd" name="phone" class="form-control bfh-phone" id="phone" >
+							<div id="phone-req" style="display: none" class="form-control-feedback">This field is required. </div>
+							<div id="phone-val" style="display: none" class="form-control-feedback">Invalid phone number. </div>
+
+
 						</div>
-						<div class="col-md-6">
+						<div id="email-container" class="col-md-6">
 							<label for="first">Email</label>
-							<input required type="email" name="email" class="form-control" id="email" placeholder="Enter Email">
+							<input required type="email" name="email" class="form-control" id="email" >
+							<div id="email-req" style="display: none" class="form-control-feedback">This field is required. </div>
+							<div id="email-val" style="display: none" class="form-control-feedback">Invalid email address.</div>
+
+
 						</div>
 					</div>
 					<button style="box-shadow: 0px 0px 0px; margin-top: 1%; float: right; margin-bottom: 2%" id="add-volunteer" class="btn-primary btn-group-mem btn ">Add Volunteer</button>
 				</div>
+			</form>
 				<div style="padding: 5%;">
 				<table id="volunteers" style="width: 100%;">
 					<thead>
