--- a/views/task-review.html
+++ b/views/task-review.html
@@ -60,6 +60,8 @@
 			{{#list disclaimers}}
 				<p>{{name}}</p>
 			{{/list}}
+			{{else}}
+				<p style="margin-left: 1%"> There are currenly no  disclaimers. </p>
 			{{/if}}
 		</div>
 
@@ -80,6 +82,8 @@
 					 </p>
 				{{/list}}
 			{{/each}}
+			{{else}}
+				<p style="margin-left: 1%"> There are currenly no required skills. </p>
 		{{/if}}
 		 </div>	
 
