--- a/views/template-review.html
+++ b/views/template-review.html
@@ -31,6 +31,8 @@
 			{{#list disclaimers}}
 				<p>{{name}}</p>
 			{{/list}}
+			{{else}}
+				<p style="margin-left: 1%"> There are currenly no disclaimers. </p>
 			{{/if}}
 		</div>
 		<br>
@@ -50,6 +52,8 @@
 					 </p>
 				{{/list}}
 			{{/each}}
+		{{else}}
+		<p style="margin-left: 1%"> There are currenly no required skills. </p>	
 		{{/if}}
 		 </div>	
 	</div>
