--- a/views/review.html
+++ b/views/review.html
@@ -18,7 +18,7 @@
 		<br>
 
 		<h7> Description </h7>
-		<div id="description" {{#if description}} {{else}} style="height: 30px" {{/if}} class="text-placeholder">{{description}} </div>
+		<div id="description" {{#if description}} {{else}} style="height: 30px" {{/if}} class="text-placeholder"> {{description}} </div>
 
 				<br>
 
@@ -59,6 +59,8 @@
 			{{#list disclaimers}}
 				<p>{{name}}</p>
 			{{/list}}
+			{{else}}
+				<p style="margin-left: 1%"> There are currenly no disclaimers. </p>
 			{{/if}}
 		</div>
 
@@ -79,6 +81,8 @@
 					 </p>
 				{{/list}}
 			{{/each}}
+		{{else}}
+				<p style="margin-left: 1%"> There are currenly no required skills. </p>
 		{{/if}}
 		 </div>	
 
