Changed volunteer table format

--- a/views/task-details.html
+++ b/views/task-details.html
@@ -121,9 +121,9 @@
 						<tbody>
 					{{#each volunteers}}
 						<tr style="background-color:white">
-							<td style="border: 1px solid #dddddd;"> {{first}}</td>
-							<td style="border: 1px solid #dddddd;"> {{last}} </td>
-							<td style="border: 1px solid #dddddd;"> {{phone}} </td>
+							<td style="border: 1px solid #dddddd;"> {{first_name}}</td>
+							<td style="border: 1px solid #dddddd;"> {{last_name}} </td>
+							<td style="border: 1px solid #dddddd;"> {{phone_number}} </td>
 							<td style="border: 1px solid #dddddd;"> {{email}} </td>
 						</tr>
 					{{/each}}
