--- a/views/task-review.html
+++ b/views/task-review.html
@@ -107,13 +107,13 @@
 					</thead>
 					<tbody>
 				{{#each volunteers}}
-					<tr style="background-color:white">
-						<td style="border: 1px solid #dddddd;"> {{first}}</td>
-						<td style="border: 1px solid #dddddd;"> {{last}} </td>
-						<td style="border: 1px solid #dddddd;"> {{phone}} </td>
-						<td style="border: 1px solid #dddddd;"> {{email}} </td>
-					</tr>
-				{{/each}}
+						<tr style="background-color:white">
+							<td style="border: 1px solid #dddddd;"> {{first_name}}</td>
+							<td style="border: 1px solid #dddddd;"> {{last_name}} </td>
+							<td style="border: 1px solid #dddddd;"> {{phone_number}} </td>
+							<td style="border: 1px solid #dddddd;"> {{email}} </td>
+						</tr>
+					{{/each}}
 					</tbody>
 				</table>
 		 </div>	
