--- a/views/task-review.html
+++ b/views/task-review.html
@@ -92,7 +92,7 @@
 		<br>
 
 		 <h7> Volunteers </h7>
-		<div id="volunteer-text" style="padding: 5%" {{#if volunteers}} {{else}} style="height:100px" {{/if}}  class="text-placeholder">
+		<div id="volunteer-text" {{#if volunteers}} {{else}} style="height:100px" {{/if}}  class="text-placeholder">
 				<table id="volunteers" style="width: 100%;">
 					<thead>
 					<tr>
