--- a/views/template-edit.html
+++ b/views/template-edit.html
@@ -47,7 +47,7 @@
 			<div class="form-group">
 				<div id="volunteer-container" class="form-group">
 					<label for="title">Number of Volunteers</label>
-					<input required type="text" name="title" {{#if num_volunteers}} value="{{num_volunteers}}" {{/if}} class="form-control" id="num_volunteers">
+					<input type="number" name="num_volunteers" {{#if num_volunteers}} value="{{num_volunteers}}" {{/if}} class="form-control" id="num_volunteers">
 				</div>
 			</div>
 		<div class="form-group">
