--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -359,6 +359,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 {
 	width: 21rem;
 	margin-bottom: 10px;
+	margin-left: 0.05%;
 }
 
 .btn-lg
