--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -20,6 +20,9 @@
 				<li class="nav-item">
 					<a class="nav-link {{template}}" href="/templates">Browse Templates</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link {{volunteers}}" href="/volunteers">View Assigned Volunteers</a>
+				</li>
 				{{/unless}}
 			</ul>
 
@@ -39,29 +42,6 @@
 								<div style="width:100%; text-align:center" class="social-buttons">
 									<a href="/auth/facebook" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
 								</div>
-                                <div style="text-align: center"> or</div>
-                                <hr>
-								 <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-										</div>
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-										</div>
-										<div class="form-group">
-											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-										</div>
-										<!--
-										<div class="checkbox">
-											 <label>
-											 <input type="checkbox"> keep me logged-in
-											 </label>
-										</div>
-										-->
-								 </form>
 							</div>
 					 </div>
 				</li>
@@ -70,6 +50,12 @@
       </ul>
 				</div>
 			{{else}}
+
+			<div id="login-buttons">
+			<div style="margin-right: 4%; float: right; width: 20%; text-align:center" class="social-buttons">
+				<a href="/logout" style="background-color: #D33E20" class="btn btn-fb">Logout</a>
+			</div>
+			</div>
 			{{/if}}
 		</div>
 		
