--- a/views/template-edit.html
+++ b/views/template-edit.html
@@ -18,7 +18,7 @@
 
 <div id="container">
 	<div class="vertical-align-15 left-align">
-		<h2> Tell us more about your task. </h2>
+		<h2> Tell us more about your template. </h2>
 	</div>
 
 	<p style="display: none" id="templateID">{{id}}</p>
