--- a/views/template-review.html
+++ b/views/template-review.html
@@ -22,7 +22,7 @@
 		<br>
 
 		<h7> Number of Volunteers</h7>
-		<div id="num_volunteers" {{#if num_volunters}} {{else}} style="height: 40px" {{/if}}class="text-placeholder">{{num_volunteers}} </div>
+		<div id="num_volunteers" {{#if num_volunters}} {{else}} style="height: 40px" {{/if}} class="text-placeholder">{{#if num_volunteers}} {{num_volunteers}} {{else}} 0 {{/if}} </div>
 
 		<br>
 
