--- a/views/task-review.html
+++ b/views/task-review.html
@@ -104,11 +104,7 @@
 					<thead>
 					<tr>
 							<th style="display: none"> </th>
-							<th style="background-color: #33cccc; border: 1px solid #dddddd;"> First Name </th>
-							<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Last Name 
-							</th>
-							<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Phone Number 
-							</th>
+							<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Name </th>
 							<th style="background-color: #33cccc; border: 1px solid #dddddd;"> Email Address 
 							</th>
 					</tr>
@@ -117,10 +113,7 @@
 				{{#each volunteers}}
 						<tr style="background-color:white">
 							<td style="display: none"> {{id}}</td>
-
-							<td style="border: 1px solid #dddddd;"> {{first_name}}</td>
-							<td style="border: 1px solid #dddddd;"> {{last_name}} </td>
-							<td style="border: 1px solid #dddddd;"> {{phone_number}} </td>
+							<td style="border: 1px solid #dddddd;"> {{name}}</td>
 							<td style="border: 1px solid #dddddd;"> {{email}} </td>
 						</tr>
 					{{/each}}
