--- a/views/createskills.html
+++ b/views/createskills.html
@@ -14,7 +14,7 @@
     async defer></script>
 
 	<script id="render-navbar" type="text/x-handlebars-template">
-		{{> navbar volunteer="active"}}
+		{{> navbar properties="active"}}
 	</script>
 
 	<div style="margin-top: 5%; margin-bottom: 2%; text-align: center">
