--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -21,7 +21,10 @@
 					<a class="nav-link {{template}}" href="/templates">Browse Templates</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {{volunteers}}" href="/volunteers">View Assigned Volunteers</a>
+					<a class="nav-link {{volunteers}}" href="/volunteers">View Volunteers</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link {{properties}}" href="/properties">Create Skills/Disclaimers</a>
 				</li>
 				{{/unless}}
 			</ul>
