--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -21,10 +21,10 @@
 					<a class="nav-link {{template}}" href="/templates">Browse Templates</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {{volunteers}}" href="/volunteers">View Volunteers</a>
+					<a class="nav-link {{volunteers}}" href="/volunteers">Volunteers</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {{properties}}" href="/properties">Create Skills/Disclaimers</a>
+					<a class="nav-link {{properties}}" href="/properties">Skill/Disclaimers</a>
 				</li>
 				{{/unless}}
 			</ul>
@@ -55,7 +55,7 @@
 			{{else}}
 
 			<div id="login-buttons">
-			<div style="margin-right: 4%; float: right; width: 20%; text-align:center" class="social-buttons">
+			<div style="margin-right: 4%; float: right; text-align:center" class="social-buttons">
 				<a href="/logout" style="background-color: #D33E20" class="btn btn-fb">Logout</a>
 			</div>
 			</div>
