--- a/views/volunteers.html
+++ b/views/volunteers.html
@@ -43,7 +43,7 @@
 					<td class="border-row"> 
 						{{#if volunteers}}
 						{{#each volunteers}}
-							{{vol_name}} < {{vol_email}} > {{#if vol_hours}} {{vol_hours}} {{else}} 0 {{/if}} hours,
+							{{vol_name}}, {{vol_email}}
 							<br>
 						{{/each}}
 						{{else}}
