--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -29,14 +29,14 @@
 			{{/unless}}
 		</ul>
 
-		
+
 
 		{{#if signin}}
 		<div id="login-buttons">
 			<ul class="nav navbar-nav">
 				<li style="margin-right: 2%; color:#87898A ">Already have an account?</li>
 				<div style="width:100%; text-align:center" class="social-buttons">
-					<a href="/auth/facebook" class="btn btn-fb"><i class="fa fa-facebook"></i> Login via Facebook</a>
+				<a href="/auth/facebook" class="btn btn-fb"><i class="fa fa-facebook"></i> Login</a>
 				</div>
 			</ul>
 		</div>
@@ -49,5 +49,5 @@
 		</div>
 		{{/if}}
 	</div>
-	
+
 </nav>
