--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -24,7 +24,7 @@
 				<a class="nav-link {{volunteers}}" href="/volunteers">Volunteers</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link {{properties}}" href="/properties">Skill/Disclaimers</a>
+				<a class="nav-link {{properties}}" href="/properties">Skills/Disclaimers</a>
 			</li>
 			{{/unless}}
 		</ul>
