--- a/views/task-create.html
+++ b/views/task-create.html
@@ -160,6 +160,7 @@
 					{{/listnowrap}}
 				</ul>
 			</div>
+			<p> Don't see a disclaimer you need? Create one <a style="color: #33cccc" href="/properties"> here </a>. </p>
 		</div>
 	</div>
 
@@ -209,6 +210,8 @@
 					{{/each}}
 				</div>	
 			</div>
+			<p> Don't see a skill you need? Create one <a style="color: #33cccc" href="/properties"> here </a>. </p>
+
 		</div>
 
 		{{#if taskBtn}}
